[package]
edition = "2021"
name = "holy-g"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2"
gloo = "0.8"

[dependencies.web-sys]
version = "0.3"
feature = [
    "HtmlInputElement"
]